[package]
name = "server"
version = "0.1.0"
authors = ["Luc Georges <luc.sydney.georges@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geobase = { git = "https://github.com/McPatate/geobase", branch = "master" }
rand = "0.7"
